--- a/styles.css
+++ b/styles.css
@@ -30,15 +30,25 @@ body {
   cursor: pointer;
 }
 
-#queuedProjectsTable {
+.table-container {
   position: fixed;
   bottom: 30px;
   left: 30px;
   z-index: 1000;
   overflow: scroll;
-  width: 600px;
+  width: 850px;
   height: 300px;
   background-color: white;
+}
+th, td {
+  padding: 8px;
+  text-align: left;
+  max-width: 100px;
+}
+
+#queuedProjectsTable {
+  width: 100%;
+  table-layout: fixed;
 }
 caption {
   background-color: blue;
